--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="AuftragsMaske">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Gradus</title>
     <base href="/">
 
     <!--Import Google Icon Font-->
