--- a/src/main/webapp/navigation.html
+++ b/src/main/webapp/navigation.html
@@ -1,7 +1,7 @@
 <nav class="top-nav" ng-controller="NavigationController as navCtrl">
     <div class="container">
         <div class="nav-wrapper">
-            <a class="page-title">[ Aktuelles Thema ]</a>
+            <a class="page-title">Gradus</a>
             <ul class="right">
                 <li>
                     <a data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
