Clean Up & Backend & Hibernate

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,12 +28,8 @@
     <script src="libs/angular/angular-ui-router.min.js"></script>
     <script src="libs/materialize/materialize.min.js"></script>
 
-    <script src="javascript/app.js"></script>
-    <script src="javascript/controllers/home/index.controller.js"></script>
-    <script src="javascript/controllers/topic/index.controller.js"></script>
-    <script src="javascript/controllers/topic/detail.controller.js"></script>
-    <script src="javascript/controllers/topic/detail.subtopic.controller.js"></script>
-    <script src="javascript/controllers/meeting/index.controller.js"></script>
+    <script src="modules/app.js"></script>
+    <script src="modules/registration/index.controller.js"></script>
 
     <!--<script src="routes.js"></script>-->
 
