--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,10 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css" />
-  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/omega/theme.css" />
   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
   <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--<link rel="stylesheet" type="text/css" href="assets/theme/jquery-ui.min.css" />-->
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/omega/theme.css" />
 </head>
 <body>
   <app-root>Loading...</app-root>
